<resources>
    <string name="app_name">Permanent Archive</string>
    <string name="screen_orientation">2</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="toolbar_skip_button">Skip</string>
    <string name="toolbar_title">Permanent.org</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_your_password_title">Forgot your password?</string>
    <string name="forgot_your_password_text">Enter the email address used to sign up for your account to receive instructions on how to reset your password.</string>
    <string name="forgot_your_password_done_text">Thank you! If your email was found in our system, you will receive an email shortly.</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_permanent">New to Permanent?</string>
    <string name="login_screen_missing_auth_token_error">Missing authentication token. Please try again.</string>
    <string name="login_screen_use_touch_id">Use Touch ID</string>
    <string name="or">Or</string>
    <string name="button_recover_password">Recover password</string>
    <string name="copyright">Ⓒ The Permanent Legacy Foundation 2020</string>
    <string name="full_name_hint">Full Name</string>
    <string name="sign_up_screen_password_hint">Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="button_edit">Edit</string>
    <string name="terms_conditions_title">Terms and Conditions</string>
    <string name="sign_up_terms_declined">Declined Terms and Conditions</string>
    <string name="verification_code_enter_verification_code">Enter verification code</string>
    <string name="verification_code_enter_code_hint">Code</string>
    <string name="no_notifications">No notifications</string>
    <string name="verify">Verify</string>
    <string name="verify_your_identity_title">Verify your identity</string>
    <string name="verify_your_identity_text">Please check your email or SMS for the 4-digit code and enter it below.</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_permanent">Sign in to\nPermanent</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="the_entered_data_is_invalid">The entered data is invalid</string>
    <string name="haadsma_dairy_truck_title">Haadsma Dairy Truck | The Haadsma Dairy Archive</string>
    <string name="haadsma_dairy_truck_text">At Permanent, we celebrate our members\' hard work through our public gallery and archive spotlights. Explore our gallery and, when you\'re ready, publish or share your own public archive.</string>
    <string name="start_exploring_now">Start Exploring Now</string>
    <string name="didnt_receive_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend code</string>
    <string name="code_is_incorrect">The 4-digit code is incorrect.</string>
    <string name="code_expired">The code expired.</string>
    <string name="code_resent">The code was resent.</string>
    <string name="send_request">Send request</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="go_to_sign_in">Go to Sign in</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="i_agree_to_receive_updates">I agree to receive updates via email</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_in_with_fingerprint">Sign in with fingerprint</string>
    <string name="sign_in_with_fingerprint_description">This option lets you securely sign in with your biometric credentials.</string>
    <string name="unlock_with_fingerprint">Unlock with fingerprint</string>
    <string name="unlock_with_credentials">Unlock with Sign in credentials</string>
    <string name="verification_code_empty_error">Verification code can not be empty</string>
    <string name="verification_code_invalid_error">Invalid verification code. Please try again.</string>
    <string name="sign_up_email_in_use_error">This email is already in use</string>
    <string name="invalid_phone_error">Please enter a valid phone number</string>
    <string name="password_empty_error">Password can not be empty</string>
    <string name="login_password_error">Please enter your password</string>
    <string name="invalid_email_error">Please enter a valid email address</string>
    <string name="invalid_name_error">Please enter a valid name</string>
    <string name="invalid_access_level_error">Please select an access level</string>
    <string name="invalid_archive_type_error">Please select an archive type</string>
    <string name="invalid_folder_name_error">Please enter a valid folder name</string>
    <string name="password_min_length_error">Your password must be at least 8 characters.</string>
    <string name="current_password_required">Please enter your current password.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="new_password_same_as_current">New password must be different from the current password.</string>
    <string name="invalid_new_password_error">Please enter your new password</string>
    <string name="invalid_retype_new_password_error">Please re-type your new password</string>
    <string name="password_weak">Password strength: weak</string>
    <string name="password_medium">Password strength: medium</string>
    <string name="password_strong">Password strength: strong</string>
    <string name="two_step_verification_add_later_message">You can always add this later</string>
    <string name="two_step_verification_skip_button">Skip</string>
    <string name="two_step_verification_submit_button">Submit</string>
    <string name="two_step_verification_phone_hint">Your phone number</string>
    <string name="two_step_verification_message">Add an extra layer of security by entering a verification code we send to your phone.</string>
    <string name="two_step_verification_title">Protect your account with 2-Step Verification</string>
    <string name="login_biometric_error_no_biometric_hardware">No biometric features available on this device.</string>
    <string name="login_biometric_error_unavailable">Biometric features are currently unavailable.</string>
    <string name="login_biometric_error_timeout">Biometrics undetected.</string>
    <string name="login_biometric_error_failed">Authentication failed.</string>
    <string name="login_biometric_error_no_biometrics_enrolled_title">No biometrics enrolled</string>
    <string name="login_biometric_error_no_biometrics_enrolled_message">Would you like to enroll them?</string>
    <string name="login_biometric_error_too_many_failed_attempts">Too many failed attempts. Please login with you credentials.</string>
    <string name="login_biometric_title">Biometric login</string>
    <string name="login_biometric_message">Log in using your biometric credential.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_biometric_unlock_with_biometrics_button">Unlock with Biometrics</string>
    <string name="login_biometric_use_credentials_button">Use credentials instead</string>
    <string name="nav_main_header_view_profile">View Profile</string>
    <string name="nav_settings_header_title_text">Logged in as:</string>
    <string name="nav_settings_header_storage_text">%s of %s used</string>
    <string name="update_app_title">Update Permanent Archive?</string>
    <string name="update_app_text">You must update to the latest version of this app in order to maintain access to your Permanent Archives on this device.</string>
    <string name="menu_drawer_public">Public</string>
    <string name="menu_drawer_private_files">Private Files</string>
    <string name="menu_drawer_shared_files">Shared Files</string>
    <string name="menu_drawer_public_files">Public Files</string>
    <string name="menu_drawer_legacy_planning">Legacy Planning</string>
    <string name="menu_drawer_manage_members">Manage Members</string>
    <string name="menu_drawer_manage_tags">Manage Tags</string>
    <string name="menu_drawer_archive_settings">Archive Settings</string>
    <string name="menu_drawer_public_gallery">Public Gallery</string>
    <string name="menu_toolbar_settings">Settings</string>
    <string name="menu_toolbar_file_metadata">File Metadata</string>
    <string name="menu_toolbar_done">Done</string>
    <string name="menu_toolbar_close">Close</string>
    <string name="menu_toolbar_more">More</string>
    <string name="menu_toolbar_public_add">Add</string>
    <string name="account">Account</string>
    <string name="storage">Storage</string>
    <string name="my_archives">My Archives</string>
    <string name="invitations">Invitations</string>
    <string name="activity_feed">Activity Feed</string>
    <string name="login_and_security">Login &amp; Security</string>
    <string name="login_and_security_description">Choose one of your account security settings.</string>
    <string name="legacy_planning">Legacy Planning</string>
    <string name="gift_storage">Gift storage</string>
    <string name="contact_support">Contact support</string>
    <string name="sign_out">Sign out</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="two_step_verification_description">Enhance account security by requiring a login verification code.</string>
    <string name="two_step_verification_is">Two-step verification is</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="add_two_step_verification">Add two-step verification method</string>
    <string name="change_verification_method">Change verification method</string>
    <string name="two_step_verification_help_text">To disable two-step verification, you must remove all existing two-step verification methods you have previously added.</string>
    <string name="main_navigation_title_archives">Archives</string>
    <string name="main_navigation_title_my_files">My Files</string>
    <string name="main_navigation_title_shares">Shares</string>
    <string name="main_navigation_title_members">Members</string>
    <string name="main_navigation_title_share_link">Share Link</string>
    <string name="main_navigation_title_search">Search</string>
    <string name="main_navigation_title_edit_files_metadata">Edit Files Metadata</string>
    <string name="main_navigation_title_new_tag_fragment">New Tag Fragment</string>
    <string name="file_navigation_title_enter_location">Enter Location</string>
    <string name="public_profile_date_hint">YYYY-MM-DD</string>
    <string name="public_profile_location_hint">Choose a location</string>
    <string name="public_profile_milestone_title_hint">What is this milestone?</string>
    <string name="public_profile_milestone_description_hint">More details and information about this milestone.</string>
    <string name="file_sort_menu_item_name_asc">Name (A-Z)</string>
    <string name="file_sort_menu_item_name_desc">Name (Z-A)</string>
    <string name="file_sort_menu_item_date_asc">Date (Oldest)</string>
    <string name="file_sort_menu_item_type_asc">File Type ↑</string>
    <string name="file_sort_menu_item_type_desc">File Type ↓</string>
    <string name="add_options_menu_item_upload">Upload</string>
    <string name="add_options_menu_item_take_photo">Take Photo</string>
    <string name="add_options_menu_item_take_video">Take Video</string>
    <string name="add_options_menu_item_new_folder">New Folder</string>
</resources>