<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/storageMenuFragment"
            android:title="@string/storage" />

        <item
            android:id="@+id/accountFragment"
            android:title="@string/account" />

        <item
            android:id="@+id/legacyLoadingFragment"
            android:title="@string/legacy_planning" />

        <item
            android:id="@+id/activityFeedFragment"
            android:title="@string/activity_feed" />

        <item
            android:id="@+id/archivesFragment"
            android:title="@string/my_archives" />

        <item
            android:id="@+id/invitationsFragment"
            android:title="@string/invitations" />

        <item
            android:id="@+id/securityFragment"
            android:title="@string/security" />

        <item
            android:id="@+id/contactSupport"
            android:title="@string/contact_support" />

        <item
            android:id="@+id/logOut"
            android:title="@string/sign_out" />
    </group>
</menu>