<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settingsItem"
        android:icon="@drawable/ic_account_circle_white"
        android:title="@string/menu_toolbar_settings"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/moreItem"
        android:icon="@drawable/ic_more_middle_grey"
        android:iconTint="@color/white"
        android:title="@string/menu_toolbar_more"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/plusItem"
        android:icon="@drawable/ic_plus_white"
        android:title="@string/menu_toolbar_public_add"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/doneItem"
        android:icon="@drawable/ic_done_white"
        android:title="@string/menu_toolbar_done"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/closeItem"
        android:icon="@drawable/ic_close_white"
        android:title="@string/menu_toolbar_close"
        app:showAsAction="always"
        android:visible="false"
        />
</menu>