<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="milestone"
            type="org.permanent.permanent.models.Milestone" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMilestoneTitle"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:hint="@string/public_profile_milestone_title_hint"
            android:text="@{milestone.title}"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMilestoneLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/public_profile_location_hint"
            android:text="@{milestone.location}"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMilestoneTitle" />

        <TextView
            android:id="@+id/tvMilestoneDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/public_profile_date_hint"
            android:text="@{milestone.startDate}"
            android:textColor="@color/middleGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMilestoneLocation" />

        <TextView
            android:id="@+id/tvMilestoneDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/public_profile_milestone_description_hint"
            android:text="@{milestone.description}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMilestoneDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>