<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="org.permanent.permanent.viewmodels.TwoStepVerificationEnablingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="180dp"
            android:layout_height="132dp"
            android:src="@drawable/splash_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/tvTitleTwoStepVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="2"
            android:maxWidth="240dp"
            android:text="@string/two_step_verification_title"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/tvMessageTwoStepVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxWidth="320dp"
            android:lines="2"
            android:text="@string/two_step_verification_message"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTwoStepVerification"
            app:layout_constraintVertical_bias="0.100000024" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="@drawable/login_box_background_color"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@drawable/login_box_stroke_color"
            app:hintTextColor="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessageTwoStepVerification"
            app:layout_constraintVertical_bias="0.060000002"
            app:setError="@{viewModel.phoneError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/two_step_verification_phone_hint"
                android:inputType="phone"
                android:text="@{viewModel.currentPhoneNumber}"
                android:afterTextChanged="@{(editable) -> viewModel.onCurrentPhoneNumberChanged(editable)}"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/two_step_verification_submit_button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.submit()}"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPhoneNumber" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSkip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:background="@null"
            android:text="@string/two_step_verification_skip_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.skipTwoStep()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

        <TextView
            android:id="@+id/tvReminderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/two_step_verification_add_later_message"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSkip" />

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/copyright"
            android:textColor="@color/lightGrey"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>